<resources>
    <string name="app_name">Geometria Figuras</string>
    <string name="autor">Gustavo de Paula 1110482313003</string>
    <string name="retangulo">Retangulo</string>
    <string name="circulo">Circulo</string>
    <string name="altura">Altura</string>
    <string name="base">Base</string>
    <string name="raio">Raio</string>
    <string name="calcularA">Calcular Area</string>
    <string name="calcularP">Calcular Perimetro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>